--- a/index.html
+++ b/index.html
@@ -178,20 +178,13 @@
             
             <div class="col-lg-4 col-md-6 cover make">
                 <a href="pages/timber.html">
-                    <img src="p_image/p_cover/timber.png" class="img-responsive" alt="" />
+                    <img src="p_image/ASB.jpg" class="img-responsive" alt="" />
                     <p class='cover_des'>
                         <b>Smithsonian NAA</b><br><br>Imroving Archirve Searching Experience
                     </p>
                 </a>
             </div>
-            <div class="col-lg-4 col-md-6 cover code">
-                <a href="pages/code.html">
-                    <img src="p_image/p_cover/code.png" class="img-responsive" alt="" />
-                    <p class='cover_des'>
-                        <b>Code Collections</b><br><br>Coding Projects since 2016
-                    </p>
-                </a>
-            </div>
+           
         </div>
     </div>
 
