--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <section class="clearfix" id="portfolio">
             <ul id="filters">
                 <li class="active"><span class="all">ALL</span></li>
-                <li><span class="research" id='ux'>RESEARCH</span></li>
-                <li><span class="product" id='make'>PRODUCT</span></li>
+                <li><span class="research" id='research'>RESEARCH</span></li>
+                <li><span class="product" id='product'>PRODUCT</span></li>
                 <li><span class="code" id='code'>VISULIZATION</span></li>
             </ul>
         </section>
@@ -125,13 +125,12 @@
                     </p>
                 </a>
             </div>
-
-
+         
             <div class="col-lg-4 col-md-6 cover research">
-                <a href="pages/airc.html">
-                    <img src="p_image/AACTMAD.png" class="img-responsive" alt="" />
+                <a href="https://www.gfbio.org">
+                    <img src="p_image/GFBio.png" class="img-responsive" alt="" />
                     <p class='cover_des'>
-                        <b>AACTMAD</b><br><br>Retaining Community Volunteers
+                        <b>GFBio</b><br><br>Interactive Lighting Installtion
                     </p>
                 </a>
             </div>
@@ -144,13 +143,13 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 cover research">
-                    <a href="https://www.gfbio.org">
-                        <img src="p_image/GFBio.png" class="img-responsive" alt="" />
-                        <p class='cover_des'>
-                            <b>GFBio</b><br><br>Interactive Lighting Installtion
-                        </p>
-                    </a>
-                </div>
+                <a href="pages/airc.html">
+                    <img src="p_image/AACTMAD.png" class="img-responsive" alt="" />
+                    <p class='cover_des'>
+                        <b>AACTMAD</b><br><br>Retaining Community Volunteers
+                    </p>
+                </a>
+            </div>
             <div class="col-lg-4 col-md-6 cover product">
                 <a href="pages/legal.html">
                     <img src="p_image/Coursist.png" class="img-responsive" alt="" />
@@ -161,7 +160,7 @@
             </div>
             <div class="col-lg-4 col-md-6 cover product">
                 <a href="pages/museum.html">
-                    <img src="p_image/p_cover/museum.jpg" class="img-responsive" alt="" />
+                    <img src="p_image/Hamido.png" class="img-responsive" alt="" />
                     <p class='cover_des'>
                         <b>Hamido Restaurant</b><br><br>Promoting Lebanon Culture
                     </p>
@@ -169,12 +168,12 @@
             </div>
             <div class="col-lg-4 col-md-6 cover code">
                     <a href="pages/vis/vis.html">
-                        <img src="p_image/p_cover/vis.png" class="img-responsive" alt="" />
+                        <img src="p_image/MSRA.png" class="img-responsive" alt="" />
                         <p class='cover_des'>
                             <b>Info Visualization</b><br><br>Choose Good Wine
                         </p>
                     </a>
-                </div>
+            </div>
             
             <div class="col-lg-4 col-md-6 cover make">
                 <a href="pages/timber.html">
