--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
                 </a>
             </div>
             <div class="col-lg-4 col-md-6 cover code">
-                    <a href="pages/vis/vis.html">
-                        <img src="p_image/MSRA.png" class="img-responsive" alt="" />
+                    <a href="pages/Experiment.html">
+                        <img src="p_image/D.png" class="img-responsive" alt="" />
                         <p class='cover_des'>
-                            <b>Info Visualization</b><br><br>Choose Good Wine
+                            <b>Code art</b><br><br>"D"
                         </p>
                     </a>
             </div>
