--- a/pages/Experiment.html
+++ b/pages/Experiment.html
@@ -7,7 +7,7 @@
 
 	    <title>Reasons to Remix</title>
 		<meta name="author" content="Wendi Ding">
-		<meta name="description" content="Remix of Reasons to logo">
+		<meta name="description" content="D">
 
 		<!-- JavaScript files -->
 		<!--<script src="js/d3.min.js"></script>-->
