--- a/pages/airc.html
+++ b/pages/airc.html
@@ -56,18 +56,18 @@
 
 
 <section class="title clearfix" style="background-color:rgb(210,211,216); color:rgba(0,0,0,0.8);">
-    <h1>AirC</h1>
-    <p>Helping Parents to Protect Children from the Smog in China</p>
+    <h1>Will Burtain's Data (1951)</h1>
+    <p>Effectiveness of Antibiotics</p>
     <img src="image/airc/back.jpg" alt="lighting design title"/>
 </section>
 <section class="page clearfix">
     <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
         <div class="col-md-6">
             <p>
-              <b>Project Type:&nbsp;&nbsp;</b>Product design
+              <b>Project Type:&nbsp;&nbsp;</b>Data Visulization
             </p>
             <p>
-              <b>Roles:&nbsp;&nbsp;</b>Product designer
+              <b>Roles:&nbsp;&nbsp;</b>Designer & Programmer
             </p>
         </div>
         <div class="col-md-6">
@@ -75,7 +75,7 @@
               <b>Team:&nbsp;&nbsp;</b>Individual work
             </p>
             <p>
-              <b>Timeline:&nbsp;&nbsp;</b>Winter 2017
+              <b>Timeline:&nbsp;&nbsp;</b>Spring 2018
             </p>
         </div>
     </div>
