--- a/pages/AE.html
+++ b/pages/AE.html
@@ -13,10 +13,10 @@
 
     <!-- jQuery -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified CSS
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <!-- Latest compiled and minified JavaScript-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>-->
 
     <!-- Open Sans & CSS -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,300' rel='stylesheet' type='text/css'>
@@ -26,13 +26,14 @@
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans:300,400" rel="stylesheet">
-    <script src='../p_js/jquery-3.1.1.min.js'></script>
     <script src='../p_js/js.js'></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../p_css/css/lightbox.min.css">
     <link rel="stylesheet" href="../p_css/style.css" media="screen" title="no title">
 
     <style>
+
+
 
         /*body {
             font-family: 'Open Sans', sans-serif;
@@ -114,7 +115,6 @@
                 width: 25%;
             }
         }
-
         #icons a i:hover{
           color: rgb(218,72,39);
           transition: all .5s ease;
@@ -168,10 +168,27 @@
   </div>
 
 
-  <section class="title clearfix" style="background-color:rgb(210,211,216); color:rgba(0,0,0,0.8);">
+  <section class="title clearfix" style="background-color:oldlace; color:rgba(0,0,0,0.8); height:105vh">
       <h1>Will Burtain's Data (1951)</h1>
       <p>Effectiveness of Antibiotics</p>
+      <div id="cont" class="container-fluid text-center" >
+          <div class="row scatter">
+            <!-- <h5 style="color: #3B3B3B;">Effectiveness of Antibiotics</h5>
+              <h6 style="color: #A6A6A6;"></h6>-->
+              <div class="col-sm-9 col-lg-9">
+                  <div id="chart"></div>
+              </div>
+              <div id="legend" class="col-sm-3" style="padding-right: 0px; padding-left: 0px;">
+                  <div class="legendTitle" style="font-size: 12px;">ANTIBIOTICS</div>
+                  <div class="legendText" style="font-size: 11px; color: #BABABA;">click to select effectiveness within one antibiotic</div>
+                  <div id="legend"></div>
+              </div>
+
+          </div>
+      </div>
+
   </section>
+
   <section class="page clearfix">
       <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
           <div class="col-md-6">
@@ -193,21 +210,7 @@
       </div>
   </section>
 
-    <div id="cont" class="container-fluid text-center">
-        <div class="row scatter">
-            <h5 style="color: #3B3B3B;">Effectiveness of Antibiotics</h5>
-            <h6 style="color: #A6A6A6;"></h6>
-            <div class="col-sm-9">
-                <div id="chart"></div>
-            </div>
-            <div id="legend" class="col-sm-3" style="padding-right: 0px; padding-left: 0px;">
-                <div class="legendTitle" style="font-size: 12px;">ANTIBIOTICS</div>
-                <div class="legendText" style="font-size: 11px; color: #BABABA;">click to select effectiveness within one antibiotic</div>
-                <div id="legend"></div>
-            </div>
 
-        </div>
-    </div>
     <script src="https://d3js.org/d3-color.v1.min.js"></script>
     <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
