--- a/pages/AE/AE.html
+++ b/pages/AE/AE.html
@@ -9,7 +9,7 @@
     <script src="http://d3js.org/d3.v3.js"></script>
 
     <!-- Pym -->
-    <script src="AE/pym.min.js"></script>
+    <script src="pym.min.js"></script>
 
     <!-- jQuery -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -22,9 +22,10 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400,300' rel='stylesheet' type='text/css'>
 
     <script src="https://use.fontawesome.com/f3a7dfaa36.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400|Roboto+Slab:300,400|Ubuntu:300,400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Open+Sans:300,400" rel="stylesheet">
     <script src='../p_js/jquery-3.1.1.min.js'></script>
     <script src='../p_js/js.js'></script>
@@ -122,7 +123,35 @@
           -moz-transition: all .5s ease;
         }
     </style>
-
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#filters li span').click(function() {
+                // fetch the class of the clicked item
+                var ourClass = $(this).attr('class');
+                // reset the active class on all the buttons
+                $('#filters li').removeClass('active');
+                // update the active state on our clicked button
+                $(this).parent().addClass('active');
+                if (ourClass == 'all') {
+                    // show all our items
+                    $('#coverlist').children('div.cover').fadeIn("slow");
+                } else {
+                    var listnum = $('#coverlist').children().length;
+                    // // hide all elements that don't share ourClass
+                    $('#coverlist').children().fadeOut("fast", function() {
+                        listnum = listnum - 1;
+                        if (listnum == 0) {
+                            $('#coverlist').children('div.' + ourClass).fadeIn("fast");
+                        }
+                    });
+                }
+            });
+        });
+    </script>
+    <script type="text/javascript">
+    </script>
+    <link rel="shortcut icon" href="p_image/logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -142,7 +171,7 @@
 </head>
 
 <body>
-  <header class='non-fixed' id='top'>
+  <header class='nav-down' id='top' style="padding: 0px 14%;">
       <a href="../index.html">
           <img class='logo_img' id="logo_img" src="../p_image/logo.png" alt="logo of Wendi Ding" style=""/>
       </a>
@@ -161,16 +190,17 @@
   </header>
   <div class="full" id='full' onclick='show_page()'>
       <ul>
-          <li><a href="../index.html#portfolio">Projects</a></li>
-          <li><a href="../index.html#about">About</a></li>
-          <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
+          <li><a href="index.html#portfolio">Projects</a></li>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="WendiDing_Resume.pdf" target="_blank">Resume</a></li>
       </ul>
   </div>
 
-
+/*
   <section class="title clearfix" style="background-color:rgb(210,211,216); color:rgba(0,0,0,0.8);">
       <h1>Will Burtain's Data (1951)</h1>
       <p>Effectiveness of Antibiotics</p>
+      <img src="image/airc/back.jpg" alt="lighting design title"/>
   </section>
   <section class="page clearfix">
       <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
@@ -191,7 +221,7 @@
               </p>
           </div>
       </div>
-  </section>
+  </section>*/
 
     <div id="cont" class="container-fluid text-center">
         <div class="row scatter">
@@ -211,8 +241,9 @@
     <script src="https://d3js.org/d3-color.v1.min.js"></script>
     <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="AE/mic.js"></script>
-    <script src="AE/script.js"></script>
+    <script src="textures.js"></script>
+    <script src="mic.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
