--- a/pages/AE/AE.html
+++ b/pages/AE/AE.html
@@ -198,7 +198,7 @@
 
 /*
   <section class="title clearfix" style="background-color:rgb(210,211,216); color:rgba(0,0,0,0.8);">
-      <h1>Will Burtain's Data (1951)</h1>
+      <h1>Will Burtain's Antibiotics (1951)</h1>
       <p>Effectiveness of Antibiotics</p>
       <img src="image/airc/back.jpg" alt="lighting design title"/>
   </section>
@@ -238,6 +238,7 @@
 
         </div>
     </div>
+
     <script src="https://d3js.org/d3-color.v1.min.js"></script>
     <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
