--- a/pages/airc.html
+++ b/pages/airc.html
@@ -58,7 +58,7 @@
 <section class="title clearfix" style="background-color:rgb(210,211,216); color:rgba(0,0,0,0.8);">
     <h1>Will Burtain's Data (1951)</h1>
     <p>Effectiveness of Antibiotics</p>
-    <img src="image/airc/back.jpg" alt="lighting design title"/>
+    <img src="../p_image/hololens.png"/>
 </section>
 <section class="page clearfix">
     <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
