VR project update

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <a href="pages/VR.html">
                     <img src="p_image/hololens.png" class="img-responsive" alt="" />
                     <p class='cover_des'>
-                        <b>Design Context Immersion</b><br><br>Improve design major education
+                        <b>Design Immersion</b><br><br>Improve architecture education
                     </p>
                 </a>
             </div>
