--- a/pages/vote.html
+++ b/pages/vote.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <title>Effectiveness of Antibiotics</title>
+    <title>Live Presidential Forecast</title>
 
     <!-- D3.js -->
     <script src="http://d3js.org/d3.v3.js"></script>
@@ -155,7 +155,6 @@
           <ul>
               <li><a href="../index.html#portfolio" id="nav-p">Projects</a></li>
               <li><a href="../index.html#about" id="nav-a">About</a></li>
-              <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
           </ul>
       </nav>
   </header>
@@ -163,7 +162,6 @@
       <ul>
           <li><a href="../index.html#portfolio">Projects</a></li>
           <li><a href="../index.html#about">About</a></li>
-          <li><a href="../WendiDing_Resume.pdf" target="_blank">Resume</a></li>
       </ul>
   </div>
 
@@ -176,12 +174,12 @@
 
   <section class="clearfix">
         <div class="projectTitle">
-                <h1 class=" projectTitle"><i>Help future designers build better empathy</i>
+                <h1 class=" projectTitle"><i>Will physical metaphor aid people understand uncertainty visualization?</i>
                 </h1>
                 <p class=" projectTitle">
                     <i>How to empathise better for design?</i>
                     <br>
-                    <p><b class="greyText">Mastery PROJECT</b></p>
+                    <p><b class="greyText">Research</b></p>
                     
                 </p>
                 
