--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
     <meta charset="utf-8">
-    <title>Maestro 3.0</title>
+    <title>WBUR Persona Experiment</title>
     <link rel="shortcut icon" href="../p_image/logo.png">
     <script src="https://use.fontawesome.com/f3a7dfaa36.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400" rel="stylesheet">
