--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -117,19 +117,19 @@
       <p>
         By interviewing parents and children, I built three personas and concluded that parents care most about reliable and efficient AQI forecast and advices to protect their children, while children care most about their health and entertainment on smog days.
       </p>
-      <div class="col-md-4 col-sm-6">
+      <div class="">
         <img src="wbur/ALp.png" alt="" style="box-shadow:0px 0px 3px #888888;"/>
         <p class="center">
           <i>The Aspirational Learner</i>
         </p>
       </div>
-      <div class="col-md-4 col-sm-6">
+      <div class="">
         <img src="wbur/WCp.png" alt="" style="box-shadow:0px 0px 3px #888888;"/>
         <p class="center">
           <i>The World Citizen</i>
         </p>
       </div>
-      <div class="col-md-4 col-sm-6">
+      <div class="">
         <img src="wbur/LLp.png" alt="" style="box-shadow:0px 0px 3px #888888;"/>
         <p class="center">
           <i> The Lifelong Listener</i>
