--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
         
         <div class="clearfix" id='coverlist' style="padding:0 12%; margin:0 auto;">
-            <div class="col-lg-4 col-md-6 cover design">
+            <div class="col-lg-4 col-md-6 cover research design">
                 <a href="pages/wbur.html">
                     <img src="p_image/wbur.png" class="img-responsive" alt="" />
                     <p class='cover_des'>
