--- a/pages/Maestro.html
+++ b/pages/Maestro.html
@@ -86,33 +86,49 @@
 <section class="page clearfix" style="margin-top:-40px;">
   <h1 class="center">Design Challenge - <br>Music students conducting without a band </h1>
   <p class="text">
-    Coming soon...
     </p>
-    <!--
+  
   <div class="">
-    <img src="image/airc/smog1.jpg" alt="" style="width:48%; margin-right:3%;"/>
-    <img src="image/airc/smog2.png" alt="" style="width:48%;"/>
+    <img src="../p_image/practice1.jpg" alt="" />
     <p class="center">
-      <i>Children in China Do NOT Get the Right Protection in Smog</i>
+        <i>Practice in front of a mirror comic credit: JOSHUA WELLS</i>
+        </p>
+    <p class="center">
+        Traditionally, new conductors attend classes where an instructor watches them conduct and provides feedback. To practice outside the classroom, they either practice silently in front of a mirror, or must recruit the help of musicians.
     </p>
+    <img src="../p_image/practice2.jpg" alt="" />
+    <p class="center">
+    <i>Conducting student practicing with musicians</i>
+    </p>
+
+
   </div>
 </section>
+
 
 <section class="page clearfix grey"  style="margin-top:-20px;">
   <h1 class='center'>Solution Overview</h1>
   <p class="text">
-    To better protect children from the smog, I came up with a mobile app with the features of a dashboard, an air map, an online forum, and a device management page
-    AirC (Air Care) is  an app that helps parents protect their children more efficiently in smog by providing weather forecast and useful tips, monitoring home conditions, and creating an online community for parents to share information.
+      With <i>Maestro</i>, conductors practice with a computer-simulated ensemble. This allows beginning conducting students to practice their art with ease; it eliminates reliance on live musicians and any stress associated with standing in front of a crowd.
+      The success of this project is expected to impact conducting education in music schools throughout the country. It establishes our sponsor as a leader in the intersection of technology and conducting pedagogy. As a tool for assessing and refining student performance, the integration of Maestro in the classroom has the potential to revolutionize the standard conducting curriculum. 
+      
   </p>
   <div class="">
-    <img src="image/airc/overview.png" alt=""/>
+        <a href="../p_image/Poster.pdf"><img src="../p_image/Poster.pdf" alt=""/></a>
     <p class="center">
-      <i>Screens of Mobile and Watch Interface</i>
+      <i>2018 Umich Design Expo Poster (Click to view)</i>
     </p>
   </div>
+  <div class="">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/I63mSh7ta6U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <p class="center">
+          <i>Maestro live demo on 2018 Design Expo</i>
+        </p>
+</p>
+</div>
 </section>
 
-
+<!--
 <section class="page clearfix" >
     <h1 class="center">The Research</h1>
     <p>
