--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
         </div>
         <div class="col-lg-4 col-md-6 cover design research">
                 <a href="pages/VR.html">
-                    <img src="p_image/hololens.png" class="img-responsive" alt="" />
+                    <img src="p_image/ARC.png" class="img-responsive" alt="" />
                     <p class='cover_des'>
-                        <b>Design Context Immersion</b><br><br>Improve design major education
+                        <b>AR is an anchor</b><br><br>Dynamic architecture model texturing 
                     </p>
                 </a>
             </div>
