--- a/pages/Experiment.html
+++ b/pages/Experiment.html
@@ -5,7 +5,7 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <!-- <meta name="viewport" content="user-scalable = yes"> -->
 
-	    <title>Reasons to Remix</title>
+	    <title>Code art</title>
 		<meta name="author" content="Wendi Ding">
 		<meta name="description" content="D">
 
