--- a/pages/vote.html
+++ b/pages/vote.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <title>Live presidential forecast</title>
+    <title>Uncertainty Visualization</title>
 
     <!-- D3.js -->
     <script src="http://d3js.org/d3.v3.js"></script>
