--- a/pages/vote.html
+++ b/pages/vote.html
@@ -171,7 +171,7 @@
   <section class="title clearfix" style="background-image: url('p_image/votec.png'); color:rgba(0,0,0,0.8);">
       <h1>Live Presidential Forecast</h1>
       <p>Correct deterministic construal error with galton board    </p>
-      <img src="../p_image/votec.png" alt="lighting design title"/>
+      <img src="../p_image/vote.gif" alt="lighting design title"/>
   </section>
 
   <section class="clearfix">
