--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             Hi, I am Wendi Ding.
           </h1>
           <h1 style="text-align:center;">
-            I am a <b style="color:rgb(223,64,76);font-weight:400;">user experience person</b> passionate about <br>problem-solving, product design, data visulization, and emerging technologies.
+            love <b style="color:rgb(223,64,76);font-weight:400;">Technology, Music, Design, Art</b><br> exploring innovations in between 
           </h1>
         </div>
         <!-- <a id='toportfolio' href="#portfolio"><i class="fa fa-angle-down" aria-hidden="true"></i></a> -->
