--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <a href="pages/VR.html">
                     <img src="p_image/ARC.png" class="img-responsive" alt="" />
                     <p class='cover_des'>
-                        <b>TexAR</b><br><br>Dynamic architecture model texturing 
+                        <b>TexAR</b><br><br>Enhance architecture learning with AR 
                     </p>
                 </a>
             </div>
