--- a/pages/VR.html
+++ b/pages/VR.html
@@ -204,8 +204,8 @@
               <i>Physical model | Digital Model</i>
               </p>
           <p class="text">
-            By conducting field research in 3 design schools: Architecture, Visual design and UX design, we want to know what are the chanllenges these future designers meet during their study? 
-            We then identify there is a disconnction between physical and digital prototype through learning process, architecture model texturing is a representative context and we will explore potential solution under it. 
+            By conducting field research in 3 design schools: Architecture, Visual design and UX design, we want to know what are the challenges these future designers meet during their study? 
+            We then identify there is a disconnection between physical and digital prototype through learning process, architecture model texturing is a representative context and we will explore potential solution under it. 
             While choosing materials, Architects consider a lot of factors besides personal preference like visual display, durability, feeling, climate, environment, light, geographical orientation, the program (architecture functionality), cost, sustainability, security. 
             Making material decisions require pratical experiences which makes instructors' feedbacks are the best learning resources for students. 
             However, there is no quick texturing method to provide a preview of texturing effect (e.g. What does a material look like when being applied on this wall?) that could apply materials on a model instantly and change materials dynamically. We learned from interviews that students often just paste material samples beside the "area" and get feedback from that.</p>
