--- a/pages/Maestro.html
+++ b/pages/Maestro.html
@@ -89,17 +89,21 @@
     </p>
   
   <div class="">
+      <p class="center">
+          Traditionally, new conductors attend classes where an instructor watches them conduct and provides feedback. To practice outside the classroom, they either practice silently in front of a mirror, or must recruit the help of musicians.
+      </p>
+    <div class="col-md-6">
     <img src="../p_image/practice1.jpg" alt="" />
     <p class="center">
         <i>Practice in front of a mirror comic credit: JOSHUA WELLS</i>
         </p>
-    <p class="center">
-        Traditionally, new conductors attend classes where an instructor watches them conduct and provides feedback. To practice outside the classroom, they either practice silently in front of a mirror, or must recruit the help of musicians.
-    </p>
+        </div>
+      <div class="col-md-6">
     <img src="../p_image/practice2.jpg" alt="" />
     <p class="center">
     <i>Conducting student practicing with musicians</i>
     </p>
+    </div>
 
 
   </div>
@@ -119,7 +123,7 @@
       <i>2018 Umich Design Expo Poster (Click to view)</i>
     </p>
   </div>
-  <div class="">
+  <div class="center">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/I63mSh7ta6U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <p class="center">
           <i>Maestro live demo on 2018 Design Expo</i>
