--- a/pages/wbur.html
+++ b/pages/wbur.html
@@ -63,7 +63,13 @@
 </section>
 <section class="page clearfix">
     <div class="clearfix" style="border-bottom:1px solid rgba(0,0,0,0.2);">
-        <div class="col-md-6">
+        <div class="col-lg-4">
+          <div class="box">
+            <h4>Tools</h4>
+            <p>Adobe Illustrator</p>
+            </div>
+        </div>
+        <div class="col-lg-4">
             <p>
               <b>Project Type:&nbsp;&nbsp;</b>Internship
             </p>
@@ -71,7 +77,7 @@
               <b>Roles:&nbsp;&nbsp;</b>UX Researcher
             </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-4">
             <p>
               <b>Team:&nbsp;&nbsp;</b>Individual work
             </p>
